Changelog for mk-query-digest:

   * General log parsing failed sometimes (issue 926).
   * IP addresses were truncated (issue 744).
   * Some options could fail to parse (issue 940).
   * Added --show-all (issue 744).

2010-03-01: version 0.9.15

   * --explain did not report failures.
   * --ask-pass did not work (issue 795).
   * Made D part of --execute DSN as default database (issue 727).
   * --tcpdump didn't work if dumped packet header had extra info (issue 906).
   * Added --type pglog for parsing Postgres logs (issue 535).

2010-02-01: version 0.9.14

   * memcached replace commands were not handled (issue 818).
   * Not all SHOW statements were distilled correctly (issue 735).
   * Tcpdump parsing crashed on certain fragmented queries (issue 832).

2010-01-06: version 0.9.13

   * Missing packets caused mutant queries (issue 761).
   * Tcpdump parsing did not always get the complete query (issue 760).
   * The script crashed immediately on some OS or versions of Perl (issue 733).
   * Added support for prepared statements (issue 740).
   * Added "prepared" report to default --report-format (issue 740).
   * Added --read-time (issue 226).
   * Error_no attribute was not numeric (issue 669).

2009-12-02: version 0.9.12

   * Certain very large queries segfaulted (issue 687).
   * Removed --unique-table-access (issue 675).
   * Added general log parsing; --type genlog (issue 172).
   * Added HTTP protocol parsing; --type http (issue 679).
   * memcached queries were not distilled.
   * DBI was required when not needed (issue 148).
   * Profile report was misaligned.
   * Added --execute-throttle (issue 702).
   * Added --statistics.
   * Added --pipeline-profile.

2009-10-30: version 0.9.11

   * Gathering RSS and VSZ didn't work on Solaris (issue 619).
   * Tool died on unknown binary log event types (issue 606).
   * Binlogs could cause "unintended interpolation of string" error (issue 607).
   * --set-vars did not work (issue 597).