@@ -14,10 +14,10 @@
 # bytes        100      60      60      60      60      60       0      60
 # IDB IO rb      0       0       0       0       0       0       0       0
 # IDB IO ro      0       0       0       0       0       0       0       0
-# IDB IO rw      0       0    0.00    0.00       0    0.00       0    0.00
+# IDB IO rw      0       0       0       0       0       0       0       0
 # IDB pages    100      18      18      18      18      18       0      18
-# IDB queue      0       0    0.00    0.00       0    0.00       0    0.00
-# IDB rec l      0       0    0.00    0.00       0    0.00       0    0.00
+# IDB queue      0       0       0       0       0       0       0       0
+# IDB rec l      0       0       0       0       0       0       0       0
 # Merge pas      0       0       0       0       0       0       0       0
 # Query_time distribution
 #   1us
